# advweb_cw

./: app.py  pyproject.toml  team_stats.py
static/css/: styles.css
templates/: home.html  season_overview.html  team_stats.html
