[tool.poetry]
name = "cw"
version = "0.1.0"
description = ""
authors = ["robbieg2 <robbiesgraham2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
gunicorn = "*" # or specify version like "gunicorn = "^20.1.0""


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
